[gd_scene load_steps=2 format=2]

[ext_resource path="res://Game/UI/FileDialog.gd" type="Script" id=1]

[node name="FileDialog" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadMenu" type="FileDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 75.0
margin_top = 75.0
margin_right = -75.0
margin_bottom = -75.0
window_title = "Open a File"
mode = 0
access = 1
current_dir = "user://"
current_path = "user://"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveMenu" type="FileDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 75.0
margin_top = 75.0
margin_right = -75.0
margin_bottom = -75.0
access = 1
current_dir = "user://"
current_path = "user://"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="file_selected" from="LoadMenu" to="." method="_on_LoadMenu_file_selected"]
